Edited wiki page OpenEVSE_II through web user interface.

--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -103,9 +103,11 @@ Place the mounting plate in the chassis and screw down each corner using the sup
 
 Note that on the board, one of the relays is marked "HOT" and the other "NEUT." When wiring the AC line side, you should insure that you connect the hot and neutral lines to the correct relay. If you get this wrong, then the ground impedance test will fail. This only matters if you're using hot-neutral (as opposed to hot-ground) wiring, which means using it at L1 in North America or anywhere outside North America.
 
-Use #10 QD terminals and short lengths of 10 gauge stranded copper wire to connect one end of each fuse block pole to a "LINE" terminal on the HV relay board. Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and connect one hot line of the AC cable to each fuse block on the input side. Connect the ground wire of the AC cable to the ground bus.
+Use #10 QD terminals and short lengths of 10 gauge stranded copper wire to connect one end of each fuse block pole to a "LINE" terminal on the HV relay board.
 
-Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hit lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Install QD terminals on the hot wires. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the QD terminals to the LOAD terminals on the relays.
+Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and crimp a .25" QD terminal on each hot line. Connect the ground wire of the AC cable to the ground bus. Connect the hot line to the LINE terminal of the HOT relay. Connect the neutral line to the LINE terminal of the NEUT relay. If you're only going to support North American L2 systems, then it doesn't matter which line connects to which relay.
+
+Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hit lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Install QD terminals on the hot wires. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the QD terminals to the LOAD terminals on the relays. It doesn't matter which J1772 hot wire connects to which relay. Connect the ground wire to the ground bus. Connect the pilot line to the top terminal of the pilot block on the logic/display board.
 
 === Contactor HV board steps ===
 
